testdata/zkc/invalid/basic_invalid_01.zkc
;;error:2:18-19:variable already declared
function f(x:u8, x:u8) -> (r:u8) {
  r = x
  return
}
